# kg_tdd

./: Cargo.toml  README.md  ROADMAP.md  clear_tmp.sh  curl_test.sh  eval-repeat.sh  eval.sh  eval_entity_seed.sh  run.sh  serve.sh  smoke.sh
assets/prompts/: entity.system.txt  entity.user.txt  relationship.system.txt  relationship.user.txt
assets/viewer/: index.html
fixtures/: seed.txt
scripts/diagnostics/: PROMPT_ITERATION_LOG.md  README.md  curl_test.sh  eval_entity_seed.sh
src/: app.rs  eval_support.rs  gold_fixtures.rs  lib.rs  main.rs
src/adapters/: cli.rs  cytoscape.rs  extraction.rs  io.rs  llm.rs  mod.rs  prompt.rs  tokenizer.rs
src/adapters/llm/: client.rs  fixture.rs  logging.rs  mod.rs  openai_compatible.rs  schema.rs
src/application/: error.rs  ingest_document.rs  mod.rs  types.rs
src/domain/: annotated_text.rs  document.rs  document_id.rs  edge_description.rs  edge_id.rs  edge_identity.rs  edge_weight.rs  entity_canonicalization.rs  entity_mention.rs  entity_name.rs  entity_type.rs  epistemic_status.rs  fact.rs  factual_claim.rs  graph_edge.rs  graph_node.rs  graph_ops.rs  knowledge_graph.rs  mod.rs  node_description.rs  node_id.rs  node_identity.rs  non_empty_string.rs  relationship_mention.rs  relationship_type.rs  text_unit.rs  todo.rs  token_count.rs
src/ports/: mod.rs
tests/: eval_gold.rs
tests/fixtures/gold/: README.md
tests/fixtures/gold/alias-merge/: expected.json  expected_extraction.json  input.txt
tests/fixtures/gold/duplicate-evidence-merge/: config.json  expected.json  expected_extraction.json  input.txt
(+5 files in other folders)
