[package]
name = "kg_tdd"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

[dependencies]
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
text-splitter = { version = "0.29.3", features = ["tokenizers"] }
tokenizers = { version = "0.22.2", features = ["http"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
time = { version = "0.3.37", features = ["formatting"] }
ureq = { version = "3.2.0", features = ["json"] }
